@@ -7,6 +7,14 @@ apt (0.8.15.9) UNRELEASED; urgency=low
   [ David Kalnischkies ]
   * Symbol file update
 
+  [ Colin Watson ]
+  * ftparchive/cachedb.cc:
+    - fix buffersize in bytes2hex
+  
+  [ Michael Vogt ]
+  * ftparchive/cachedb.cc:
+    - make buffer fully dynamic (thanks to Colin Watson)
+  
  -- Christian Perrier <bubulle@debian.org>  Wed, 14 Sep 2011 20:13:40 +0200
 
 apt (0.8.15.8) unstable; urgency=low
